<resources>
    <string name="app_name">Ourlist</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify">Verify your Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="alreadyhaveanacc">Already have an account?</string>
    <string name="donthaveanaccount">Don\'t have an account?</string>
    <string name="newtask">New Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="test">Test</string>
</resources>