<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="100dp"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="344dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="395dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/transparent_bg_bordered"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="344dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="395dp"
            android:inputType="textPassword"
            android:background="@drawable/transparent_bg_bordered"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="344dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etVerPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="395dp"
            android:inputType="textPassword"
            android:background="@drawable/transparent_bg_bordered"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/montserrat_medium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyhaveanacc"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_medium"/>

            <Button
                android:id="@+id/signinactBtn"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/signin"
                android:textColor="@color/black"
                android:background="@color/transparent"
                android:padding="0dp"
                android:fontFamily="@font/montserrat_medium"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:background="@color/purple"/>


</androidx.constraintlayout.widget.ConstraintLayout>